# avapi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: intraday_15min_GME.csv
ex_data/: btc.csv  daily2.csv  intraday_TSLA.csv  weekly_AAPL.csv
inc/: avapi.h  csv-parser.h  rapidcsv.h
include/: AvapiCore.hpp  avapi.hpp
include/avapi/: ApiCall.hpp  AvapiMisc.hpp  Company.hpp  Crypto.hpp  ExchangeRate.hpp  GlobalQuote.hpp  Stock.hpp  TimePair.hpp  TimeSeries.hpp  Url.hpp  misc.hpp
include/avapi/Container/: AnnualEarnings.hpp  ExchangeRate.hpp  GlobalQuote.hpp  QuarterlyEarnings.hpp  TimePair.hpp  TimeSeries.hpp
include/avapi/company/: Company.hpp  Earnings.hpp  GlobalQuote.hpp  Overview.hpp  Stock.hpp
include/avapi/containers/: TimePair.hpp
include/avapi/crypto/: Crypto.hpp  ExchangeRate.hpp  HealthIndex.hpp  Pricing.hpp
src/: ApiCall.cpp  AvapiMisc.cpp  Company.cpp  Crypto.cpp  Earnings.cpp  ExchangeRate.cpp  GlobalQuote.cpp  Overview.cpp  Stock.cpp  TimeSeries.cpp  Url.cpp  avapi.cpp  main.cpp  misc.cpp
src/Container/: AnnualEarnings.cpp  ExchangeRate.cpp  GlobalQuote.cpp  QuarterlyEarnings.cpp  TimeSeries.cpp
src/company/: Company.cpp  Earnings.cpp  Overview.cpp  Stock.cpp
src/crypto/: Crypto.cpp  ExchangeRate.cpp  HealthIndex.cpp  Pricing.cpp
test/: test01_stringReplace.cpp  test02_readFirstLineFromFile.cpp  test03_toUnixTimestamp.cpp  test04_parseCsvFile.cpp  test05_parseCsvString.cpp
test/data/: daily.csv  daily_GME.csv  monthly_AAPL.csv
tests/: test03_toUnixTimestamp.cpp  test04_parseCsvFile.cpp  test05_parseCsvString.cpp
